# openseespy-solvers

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: test.yml
docs/: adding-a-solver.md  examples.md  getting-started.md  hooks.py  index.md  installation.md  recommended-solvers.md
docs/api/: cupy.md  exceptions.md  hybrid.md  index.md  nvmath.md  precond.md  precond_cupy.md  scipy.md
docs/assets/: brick-bar-eigen-benchmark.csv  brick-bar-eigen-benchmark.json  brick-bar-static-benchmark.csv  brick-bar-static-benchmark.json
docs/development/: index.md  pythonsparse-interface.md
docs/reference/: cupy.md  nvmath.md  scipy.md
docs/user-guide/: index.md  numberer.md  preconditioners.md  pythonsparse-interface.md  solver-objects.md  to-opensees.md  to-openseespy.md
examples/: README.md  brick_bar.py  brick_bar_eigen.py  linear_static_cg.py  linear_static_cg_gpu.py  linear_static_spsolve.py  modal_eigsh.py  plot_brick_bar_benchmark.py
examples/solvers/: _brick_common.py  _lobpcg_example.py  cupy_cg.py  cupy_cg_jacobi.py  cupy_eigsh.py  cupy_gmres.py  cupy_gmres_ilu.py  cupy_lobpcg.py  cupy_spsolve.py  hybrid_spsolve.py  nvmath_direct_solver.py  scipy_cg.py  scipy_cg_jacobi.py  scipy_eigsh.py  scipy_gmres.py  scipy_gmres_ilu.py  scipy_lobpcg.py  scipy_spsolve.py  scipy_umfpack.py
src/openseespy_solvers/: __init__.py  _base.py  _docstrings.py  _dtype.py  _factorization.py  _hybrid.py  _sparse.py  exceptions.py  hybrid.py  stats.py
src/openseespy_solvers/cupy/: __init__.py  _base.py  precond.py
src/openseespy_solvers/nvmath/: __init__.py  _base.py
src/openseespy_solvers/scipy/: __init__.py  _base.py  precond.py
tests/: conftest.py  test_backend.py  test_config.py  test_eigen.py  test_examples.py  test_imports.py  test_nvmath.py  test_solvers.py  test_umfpack.py
