[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openseespy-solvers"
version = "0.1.0"
description = "Ready-to-use, SciPy-style PythonSparse solvers for OpenSeesPy"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "openseespy-solvers contributors" }]
keywords = ["opensees", "openseespy", "solver", "scipy", "sparse", "eigen", "finite-element"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    # SciPy 1.12+ exposes rtol/atol on sparse iterative solvers (used by cg/gmres).
    "numpy>=1.26",
    "scipy>=1.12",
]

[project.optional-dependencies]
opensees = ["openseespy"]
# Install the CuPy wheel matching your CUDA toolkit, e.g. cupy-cuda12x (see docs).
gpu = ["cupy>=13.0"]
amg = ["pyamg>=5.0"]
dev = [
    "pytest>=8",
    "ruff>=0.4",
    "build",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]

[project.urls]
Homepage = "https://github.com/gaaraujo/openseespy-solvers"
Documentation = "https://openseespy-solvers.readthedocs.io/"
Issues = "https://github.com/gaaraujo/openseespy-solvers/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/openseespy_solvers"]

[tool.hatch.build.targets.sdist]
include = ["src/openseespy_solvers", "README.md", "LICENSE", "CHANGELOG.md"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"src/openseespy_solvers/_base.py" = ["N802", "N803", "N806"]
"src/openseespy_solvers/scipy/_base.py" = ["N802", "N803", "N806"]
"src/openseespy_solvers/cupy/_base.py" = ["N802", "N803", "N806"]
"src/openseespy_solvers/scipy/precond.py" = ["N803"]
"src/openseespy_solvers/scipy/__init__.py" = ["F401", "N802", "N803", "N806"]
"src/openseespy_solvers/cupy/__init__.py" = ["F401", "N802", "N803", "N806"]
"src/openseespy_solvers/__init__.py" = ["F401"]
"tests/**" = ["N803", "N806", "I001"]
"src/openseespy_solvers/cupy/precond.py" = ["N803"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
