[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openseespy-solvers"
version = "0.1.2"
description = "scipy-style PythonSparse solvers for OpenSeesPy"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "openseespy-solvers contributors" }]
keywords = ["opensees", "openseespy", "solver", "scipy", "sparse", "eigen", "finite-element"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # scipy 1.12+ exposes rtol/atol on sparse iterative solvers (used by cg/gmres).
    "numpy>=1.26",
    "scipy>=1.12",
]

[project.optional-dependencies]
opensees = ["openseespy"]
# Prefer cuda12/cuda13 for GPU installs. The generic cupy extra is kept for users
# who intentionally want cupy's source-build package.
cupy = ["cupy>=13.0"]
cuda12 = ["cupy-cuda12x>=13.0", "nvmath-python[cu12]>=0.9.0"]
cuda13 = ["cupy-cuda13x>=13.0", "nvmath-python[cu13]>=0.9.0"]
# 64-bit UMFPACK direct solver (CPU) for openseespy_solvers.scipy.umfpack.
# On Windows, prefer: conda install -c conda-forge scikit-umfpack (PyPI is sdist-only).
umfpack = ["scikit-umfpack>=0.3.3"]
dev = [
    "pytest>=8",
    "ruff>=0.4",
    "build",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]

[project.urls]
Documentation = "https://openseespy-solvers.readthedocs.io/"
Homepage = "https://github.com/gaaraujo/openseespy-solvers"
Issues = "https://github.com/gaaraujo/openseespy-solvers/issues"
Source = "https://github.com/gaaraujo/openseespy-solvers"

[tool.hatch.build.targets.wheel]
packages = ["src/openseespy_solvers"]

[tool.hatch.build.targets.sdist]
include = ["src/openseespy_solvers", "README.md", "LICENSE", "CHANGELOG.md"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"src/openseespy_solvers/_base.py" = ["N802", "N803", "N806"]
"src/openseespy_solvers/scipy/_base.py" = ["N802", "N803", "N806"]
"src/openseespy_solvers/cupy/_base.py" = ["N802", "N803", "N806"]
"src/openseespy_solvers/nvmath/_base.py" = ["N802", "N803", "N806"]
"src/openseespy_solvers/nvmath/__init__.py" = ["F401", "N802", "N803", "N806"]
"src/openseespy_solvers/scipy/precond.py" = ["N803"]
"src/openseespy_solvers/scipy/__init__.py" = ["F401", "N802", "N803", "N806"]
"src/openseespy_solvers/cupy/__init__.py" = ["F401", "N802", "N803", "N806"]
"src/openseespy_solvers/__init__.py" = ["F401"]
"tests/**" = ["N803", "N806", "I001"]
"examples/**" = ["I001", "E402"]
"src/openseespy_solvers/_hybrid.py" = ["N803", "N806"]
"src/openseespy_solvers/cupy/precond.py" = ["N803", "N806"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
